--- a/style.css
+++ b/style.css
@@ -5,51 +5,86 @@
 }
 
 :root {
-    --main-color: #FDB0BE;
-    --main-fonts: #b4b7bf;
+    --main-color: #F8ABAB;
+    --main-fontColor: #b4b7bf;
+    --backgroundColor: #f5f5f5;
 }
 
 html {
     font-family: 'Muli', sans-serif;
-    color: var(--main-fonts);
+    font-size: 16px;
+    color: var(--main-fontColor);
 }
 
 .app-wrapper {
     min-height: 100vh;
-    background-color: rgb(244, 242, 242);
+    background-color: var(--backgroundColor);
+    padding: 12% 6%;
 }
+
+.app-wrapper h1 {
+    font-family: 'Stoke', serif;
+    font-size: 2.5rem;
+    text-align: center;
+    /* padding: 40px 20px; */
+}
+
+.app-wrapper p {}
+
+.input-section .add-input {
+    display: block;
+    width: 90%;
+    margin: 0 auto;
+    line-height: 3;
+    background-color: var(--backgroundColor);
+    border-style: none;
+    border-bottom: 2px solid #fff;
+}
+
+.input-section h2 {
+    text-align: right;
+    font-size: .8rem;
+    /* margin-right: 10px; */
+    color: var(--main-color);
+}
+
+/* .input-section h2 .fa-plus {} */
+
 
 .todo-item {
     position: relative;
-    background-color: var(--main-color);
+    background: linear-gradient(to right, var(--main-color) 0, #fcc1c1 100%);
     line-height: 3;
-    margin: 20px;
+    margin: 20px 0;
     padding: 0 55px;
     border-radius: 8px;
     color: #fff;
+    box-shadow: 1px 1px 1px #a9a9a9;
 }
 
-.todo-item--checked {
-    background-color: #fff;
-    color: var(--main-fonts);
-    text-decoration: line-through;
-}
-
-.todo-item .todo__dot {
+.todo-item::before {
+    content: '';
     position: absolute;
     top: 50%;
     left: 20px;
     transform: translateY(-50%);
-    width: 20px;
-    height: 20px;
+    width: 14px;
+    height: 14px;
     border-radius: 50%;
     background-color: var var(--main-color);
     border: 2px solid #fff;
+    /* box-shadow: 0 0 3px grey; */
 }
 
-.todo-item .todo__dot.todo__dot--checked {
-    background-color: var(--main-fonts);
-    /* border: 2px solig var(--main-fonts); */
+.todo-item--checked {
+    background: #fff;
+    color: var(--main-fontColor);
+    text-decoration: line-through;
+}
+
+.todo-item--checked::before {
+    background-color: var(--main-fontColor);
+    border: 2px solid var(--main-fontColor);
 }
 
 .todo-item .todo__remove-ico {
