--- a/style.css
+++ b/style.css
@@ -25,48 +25,25 @@ html {
     padding: 12% 6%;
 }
 
-.main__section h1 {
+/* --- Header --- */
+
+.header h1 {
     font-family: 'Stoke', serif;
     font-size: 2.2rem;
     text-align: center;
 }
 
-.main__section p {
+.header p {
     font-size: .8rem;
     padding: 5px 0;
 }
 
-.main__section h3 {
-    color: var(--activeToDo);
-    text-align: right;
-    font-size: 1rem;
-    margin: -12px 0 40px 0;
-    cursor: pointer;
-    transition: .5s;
-}
+/* --- To-do --- */
 
-.main__section h3:hover {
-    color: var(--inactive-fontColor);
-}
-
-.todo__input,
-.todo__container {
+.todo {
     border-radius: 8px;
     line-height: 3;
     margin: 15px 0;
-}
-
-.todo__input {
-    width: 100%;
-    font-size: 1rem;
-    color: var(--main-fontColor);
-    background-color: #fff;
-    border: 1px solid #cdcdcd;
-    /* box-shadow: 0 0 1px grey; */
-    padding: 0 20px;
-}
-
-.todo__container {
     display: flex;
     width: 100%;
     color: #fff;
@@ -78,7 +55,7 @@ html {
     padding: 8px 0;
 }
 
-.todo__container .todo__dot {
+.todo .todo__dot {
     position: relative;
     flex-basis: var(--dots-width);
     background-color: var var(--main-color);
@@ -103,7 +80,7 @@ html {
     word-wrap: break-word;
 }
 
-.todo__container--checked {
+.todo--checked {
     color: var(--inactive-fontColor);
     text-decoration: line-through;
     background: #fff;
@@ -134,6 +111,37 @@ html {
 
 .todo__icons .fa-trash-alt {
     left: 70%;
+}
+
+/* --- Add to-do section --- */
+
+.header h3 {
+    color: var(--activeToDo);
+    text-align: right;
+    font-size: 1rem;
+    margin: -12px 0 40px 0;
+    cursor: pointer;
+    transition: .5s;
+}
+
+.header h3:hover {
+    color: var(--inactive-fontColor);
+}
+
+.add-todo__input {
+    border-radius: 8px;
+    line-height: 3;
+    margin: 15px 0;
+}
+
+.add-todo__input {
+    width: 100%;
+    font-size: 1rem;
+    color: var(--main-fontColor);
+    background-color: #fff;
+    border: 1px solid #cdcdcd;
+    /* box-shadow: 0 0 1px grey; */
+    padding: 0 20px;
 }
 
 @media (orientation: landscape) {
