--- a/css/style.css
+++ b/css/style.css
@@ -16,4 +16,31 @@ body {
   font: 400 18px "Quicksand", sans-serif;
   color: #808080;
 }
+
+body {
+  min-height: 100vh;
+}
+
+.add-todo {
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 80px;
+}
+
+.add-todo__btn {
+  position: absolute;
+  top: 0;
+  left: 50%;
+  -webkit-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
+  width: 60px;
+  height: 60px;
+  border-radius: 50%;
+  background-color: #F17275;
+  font-size: 25px;
+  color: #fff;
+  border: none;
+}
 /*# sourceMappingURL=style.css.map */
