Add basic styles to header

--- a/css/style.css
+++ b/css/style.css
@@ -17,8 +17,41 @@ body {
   color: #808080;
 }
 
+h1 {
+  font-weight: 400;
+  color: #5E66E7;
+}
+
 body {
   min-height: 100vh;
+}
+
+.header {
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: 70% 30%;
+      grid-template-columns: 70% 30%;
+  -ms-grid-rows: 2fr 1fr;
+      grid-template-rows: 2fr 1fr;
+  height: calc(40px * 3);
+  border-bottom: 1px solid #b1b1b1;
+  padding: 0 15px;
+}
+
+.header__name {
+  -ms-grid-column: 1;
+      grid-column-start: 1;
+  grid-column-end: 3;
+  line-height: calc(40px * 2);
+}
+
+.header__date {
+  line-height: 40px;
+}
+
+.header__counter {
+  line-height: 40px;
+  text-align: center;
 }
 
 .add-todo {
