--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -3,19 +3,25 @@
 $font-main: 'Quicksand',
 sans-serif;
 $font-weight-regular: 400;
+$font-weight-light: 300;
 $font-size-regular: 18px;
 
 // ---- COLORS ----
 
 // Regular text color
 $text-color: #808080;
-// White color
-$white-color: #fff;
 // Main color
 $main-color: #F17275;
 // Heading color
 $heading-color: #5E66E7;
+// White color
+$white-color: #fff;
+// Gray color
+$gray-color: #b1b1b1;
 
+
+// Header line-height
+$line-height: 40px;
 
 // ----- BREAKPOINTS -----
 
