--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -2,3 +2,8 @@ body {
     font: $font-weight-regular $font-size-regular $font-main;
     color: $text-color;
 }
+
+h1 {
+    font-weight: $font-weight-regular;
+    color: $heading-color;
+}
