--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -14,6 +14,8 @@ $text-color: #808080;
 $main-color: #F17275;
 // Heading color
 $heading-color: #5E66E7;
+// App background color
+$bg-color: #FAFBFC;
 // White color
 $white-color: #fff;
 // Gray color
