--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -1,6 +1,7 @@
 body {
     font: $font-weight-regular $font-size-regular $font-main;
     color: $text-color;
+    background-color: $bg-color;
 }
 
 h1 {
