--- a/sass/components/_buttons.scss
+++ b/sass/components/_buttons.scss
@@ -3,7 +3,11 @@
     @include flexCenter;
 
     .btn {
+        display: none;
+        color: $gray-color;
+        border: none;
         font-size: 1.1rem;
+        background-color: transparent;
     }
 }
 
@@ -17,7 +21,7 @@
     height: 60px;
     border-radius: 50%;
     background-color: $main-color;
-    font-size: 1.2rem;
+    font-size: 2rem;
     color: $white-color;
     border: none;
 }
