--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -1,6 +1,6 @@
 // ---- FONTS ----
 
-$font-main: 'Quicksand',
+$font-main: 'Fira Sans',
 sans-serif;
 $font-weight-regular: 400;
 $font-weight-light: 300;
@@ -23,7 +23,7 @@ $gray-color: #b1b1b1;
 
 
 // Header line-height
-$line-height: 40px;
+$line-height: 30px;
 
 // ----- BREAKPOINTS -----
 
