--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -6,5 +6,16 @@ body {
 
 h1 {
     font-weight: $font-weight-regular;
+    font-size: 2rem;
     color: $heading-color;
+}
+
+p {
+    font-weight: $font-weight-light;
+    font-size: .8rem;
+}
+
+input {
+    font: .9rem $font-main;
+    color: $text-color;
 }
