--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -9,7 +9,7 @@ $font-size-regular: 18px;
 // ---- COLORS ----
 
 // Regular text color
-$text-color: #808080;
+$text-color: #727272;
 // Main color
 $main-color: #F17275;
 // Heading color
@@ -19,7 +19,7 @@ $bg-color: #FAFBFC;
 // White color
 $white-color: #fff;
 // Gray color
-$gray-color: #b1b1b1;
+$gray-color: #c1c1c1;
 
 
 // Header line-height
