--- a/sass/components/_buttons.scss
+++ b/sass/components/_buttons.scss
@@ -1,12 +1,15 @@
 .todo__btn {
     flex-basis: calc((100% - 92%)/2);
     @include flexCenter;
+    @include transition;
 
     .btn {
-        display: none;
+        visibility: hidden;
+        opacity: 0;
+        transition: visibility .3s, opacity 0.4s linear;
         color: $gray-color;
         border: none;
-        font-size: 1.1rem;
+        font-size: .8rem;
         background-color: transparent;
     }
 }
@@ -21,7 +24,29 @@
     height: 60px;
     border-radius: 50%;
     background-color: $main-color;
-    font-size: 2rem;
-    color: $white-color;
+    // font-size: 2rem;
+    // color: $white-color;
     border: none;
+
+    &::before {
+        content: '';
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        width: 2px;
+        height: 18px;
+        background-color: $white-color;
+    }
+
+    &::after {
+        content: '';
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        width: 18px;
+        height: 2px;
+        background-color: $white-color;
+    }
 }
