--- a/css/style.css
+++ b/css/style.css
@@ -136,7 +136,7 @@ body {
   transition: .4s linear;
 }
 
-.todo__btn .btn {
+.btn {
   visibility: hidden;
   opacity: 0;
   -webkit-transition: visibility .3s, opacity 0.4s linear;
@@ -149,6 +149,13 @@ body {
 .btn__complete {
   border-radius: 50%;
   border: 2px solid #b1b1b1;
+}
+
+.btn__complete--checked {
+  background-color: #F17275;
+  border: 2px solid #F17275;
+  -webkit-box-shadow: inset 0 0 1px 2px #fff;
+          box-shadow: inset 0 0 1px 2px #fff;
 }
 
 .btn__delete {
