--- a/css/style.css
+++ b/css/style.css
@@ -126,6 +126,14 @@ body {
   width: 100%;
   height: 60px;
   z-index: 1;
+  background-color: #FAFBFC;
+}
+
+@media (min-width: 826px) {
+  .add-todo__section {
+    border-bottom-left-radius: 10px;
+    border-bottom-right-radius: 10px;
+  }
 }
 
 .todo__btn {
