--- a/sass/layout/_layout.scss
+++ b/sass/layout/_layout.scss
@@ -69,4 +69,10 @@ body {
     width: 100%;
     height: 60px;
     z-index: 1;
+    background-color: $bg-color;
+
+    @include md-media {
+        border-bottom-left-radius: 10px;
+        border-bottom-right-radius: 10px;
+    }
 }
