Change addTodo btn position

--- a/sass/components/_buttons.scss
+++ b/sass/components/_buttons.scss
@@ -47,7 +47,7 @@
 }
 
 .add-todo__btn {
-    @include position(absolute, $top: 0, $left: 50%);
+    @include position(absolute, $top: 50%, $left: 50%);
     transform: translate(-50%, -50%);
     width: 60px;
     height: 60px;
