--- a/css/style.css
+++ b/css/style.css
@@ -110,7 +110,7 @@ body {
 
 .todo__section {
   padding-top: calc(30px * 3 + (10px * 2));
-  padding-bottom: 60px;
+  padding-bottom: 80px;
   height: 100%;
 }
 
@@ -124,8 +124,16 @@ body {
   bottom: 0;
   left: 0;
   width: 100%;
-  height: 60px;
+  height: 80px;
+  background-color: #FAFBFC;
   z-index: 1;
+}
+
+@media (min-width: 826px) {
+  .add-todo__section {
+    border-bottom-left-radius: 10px;
+    border-bottom-right-radius: 10px;
+  }
 }
 
 .todo__btn {
@@ -193,7 +201,7 @@ body {
 
 .add-todo__btn {
   position: absolute;
-  top: 0;
+  top: 50%;
   left: 50%;
   -webkit-transform: translate(-50%, -50%);
           transform: translate(-50%, -50%);
