--- a/sass/components/_todo.scss
+++ b/sass/components/_todo.scss
@@ -10,6 +10,11 @@
         border: none;
         padding: 10px;
         @include transition;
+
+        &:focus {
+            outline-offset: -3px;
+            outline-width: 3px;
+        }
     }
 
     &::before {
