--- a/css/style.css
+++ b/css/style.css
@@ -94,8 +94,8 @@ body {
 
 .header__name {
   -ms-grid-column: 1;
-      grid-column-start: 1;
-  grid-column-end: 3;
+  -ms-grid-column-span: 2;
+  grid-column: 1 / 3;
   line-height: calc(30px * 2);
 }
 
