--- a/sass/layout/_layout.scss
+++ b/sass/layout/_layout.scss
@@ -38,8 +38,7 @@ body {
     }
 
     &__name {
-        grid-column-start: 1;
-        grid-column-end: 3;
+        grid-column: 1 / 3;
         line-height: calc(#{$line-height} * 2);
     }
 
